--- a/css/style.css
+++ b/css/style.css
@@ -69,36 +69,43 @@ header img {
 .cd h3 {
     margin: 4px 0;
     color: white;
-    font-size: 20px;
+    font-size: 18px;
     text-transform: uppercase;
 }
 
 .cd span.author {
     color: grey;
-    font-size: 20px;
+    font-size: 15px;
 }
 .cd span.language{
     color: grey;
-    font-size: 20px;
+    font-size: 10px;
+    width: 40px;
+    height: 40px;
 }
 .cd span.voto {
     color: grey;
 }
 .search-bar{
     float: right;
-    width: 20%;
+    width: 30%;
     margin-right: px;
     height: 100%;
     display: flex;
     align-items: center;
+    justify-content: center;
+    
 }
 .search-bar input{
     border-radius: 5px;
     box-shadow: 8px 8px #1e2d3b;
-    height: 24px;
+    height: 26px;
+    border: 2px solid #2e3a46;
+    
 }
 .cd span{
     margin-top: 15px;
+    text-align: center;
 }
 
 .search-bar button{
@@ -111,6 +118,50 @@ header img {
 
 
 }
+.search-bar button:hover{
+    background-color: #1e2d3b;
+    color: white;
+    cursor: pointer;
+}
 .input{
     padding-left: 3px;
+}
+.voto > *{
+    color: rgb(255, 217, 0);
+}
+.language img{
+    width: 40px;
+    height: 40px;
+    background-color: #2e3a46;
+   
+}
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #d91921; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #7c0404; 
+}
+.number-page{
+    width: 100%;
+    height: 40px;
+    text-align: center;
+}
+.page span{
+    color: white;
+    text-align: center;
+    margin: 0 5px;
 }
