--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,16 @@ body {
     height: 100%;
     margin: 0 auto;
     float: left;
+    display: flex;
+    align-items: center;
 }
+.container a:first-of-type{
+    margin-left: 100px;
+}
+.container a{
+    margin: 8px;
+    text-decoration: none;
+} 
 .container img{
     height: 40px;
     margin: 15px;
@@ -50,8 +59,9 @@ header img {
     height: 380px;
     background: black;
     text-align: center;
-    overflow: hidden;
+    text-overflow: ellipsis;
     position: relative;
+    overflow: hidden;
   
 }
 
@@ -63,10 +73,10 @@ header img {
     
 }
 .back p:first-child{
-    margin-top: 30px;
+    
 }
-.back p,strong {
-    margin: 2px 0;
+.back p {
+    margin: 4px 0;
     color: white;
     font-size: 12px;
     text-transform: uppercase;
@@ -83,8 +93,8 @@ header img {
     width: 40px;
     height: 40px;
 }
-.cd span.voto {
-    color: grey;
+.voto strong  {
+    color: white;
 }
 .search-bar{
     float: right;
@@ -129,7 +139,7 @@ header img {
 .input{
     padding-left: 3px;
 }
-.voto > *{
+.voto > i{
     color: rgb(255, 217, 0);
 }
 .language img{
@@ -180,6 +190,7 @@ header img {
     opacity: 0;
     position: absolute;
     transition: 0.8s;
+    
 }
 .back:hover{
     opacity: 1;
@@ -189,4 +200,17 @@ header img {
 }
 .front:hover{
     opacity: 0;
+}
+.container a{
+    color: white;
+}
+.overview{
+    text-overflow: ellipsis;
+    font-size: 5px;
+    
+}
+.title{
+    text-align: center;
+    color: white;
+    margin-top: 50px;
 }
