--- a/css/style.css
+++ b/css/style.css
@@ -43,10 +43,15 @@ header img {
 
 .cds-container {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    padding: 100px 0;
+    flex-flow: row;
+    flex-wrap: no-wrap;
+    align-items: flex-start;
+    overflow-x: auto;
+    padding-top: 50px;
+    
+}
+.film:last-child {
+    margin-bottom: 200px;
 }
 
 .cd {
@@ -55,13 +60,12 @@ header img {
     align-items: center;
     flex-direction: column;
     flex-basis: 200px;
-    margin: 10px 20px;
     height: 380px;
     background: black;
-    text-align: center;
     text-overflow: ellipsis;
     position: relative;
     overflow: hidden;
+    flex-shrink: 0;
   
 }
 
@@ -166,7 +170,7 @@ header img {
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #7c0404; 
+  background: #860c10; 
 }
 .number-page{
     width: 100%;
@@ -210,7 +214,9 @@ header img {
     
 }
 .title{
-    text-align: center;
+    font-size: 30px;
+    text-align: left;
     color: white;
     margin-top: 50px;
+    margin-left: 20px;
 }
